# libnrf52833

./: .gitignore  .nvim.lua  CMakeLists.txt  Config.cmake.in  README.md
.cache/clangd/index/: clock.c.D692814D17BFA560.idx  clock.h.406896D39714C7F6.idx  gpio.c.FC3F2BC160E3848B.idx  gpio.h.B7BEDACD0832E2BC.idx  macros.h.F452FCA501AFFC9C.idx  uarte.c.DF43D4E79F5BF812.idx  uarte.h.44112F0110DFBFED.idx  utils.c.7ACA45C599C5F1CC.idx  utils.h.ED111877BBCCD14F.idx
include/: nvmc.h  utils.h
include/nrf52833/: adc.h  clock.h  counter.h  gpio.h  i2c.h  nvmc.h  pdm.h  pwm.h  radio.h  twim.h  uarte.h
install/cmake/: nrf52833Targets-noconfig.cmake  nrf52833Targets.cmake
install/include/nrf52833/: macros.h  uarte.h
scripts/: compile  embed  install
src/: adc.c  clock.c  counter.c  gpio.c  i2c.c  macros.h  nvmc.c  pdm.c  pwm.c  radio.c  twim.c  uarte.c  utils.c  utils.h
